--- a/public/index.html
+++ b/public/index.html
@@ -773,7 +773,7 @@
         <span class="icon">✉️</span>
         <div>
           <div class="label">Email</div>
-          <div class="value">elichaagbodoh@gmail.com</div>
+          <div class="value"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="385d54515b5059595f5a575c5750785f55595154165b5755">[email&#160;protected]</a></div>
         </div>
       </div>
       <div class="info-card">
@@ -951,8 +951,8 @@
     <div class="contact-info reveal">
       <p>Disponible pour des opportunités de stage, missions freelance ou collaborations sur des projets techniques ambitieux. N'hésitez pas à me contacter !</p>
       <div class="contact-links">
-        <a href="mailto:elichaagbodoh@gmail.com" class="contact-link">
-          <span class="icon">✉️</span> elichaagbodoh@gmail.com
+        <a href="/cdn-cgi/l/email-protection#ee8b82878d868f8f898c818a8186ae89838f8782c08d8183" class="contact-link">
+          <span class="icon">✉️</span> <span class="__cf_email__" data-cfemail="a9ccc5c0cac1c8c8cecbc6cdc6c1e9cec4c8c0c587cac6c4">[email&#160;protected]</span>
         </a>
         <a href="tel:+22891908762" class="contact-link">
           <span class="icon">📱</span> +228 91 908 762
@@ -1012,7 +1012,7 @@
   </div>
 </div>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 // ===== CURSOR =====
 const cursor = document.getElementById('cursor');
 const ring = document.getElementById('cursorRing');
@@ -1106,77 +1106,17 @@ function showTyping() {
   return div;
 }
 
-const PROFILE_CONTEXT = `
-Tu es l'assistant IA personnel de Yaovi Elicha AGBODOH, un professionnel en administration systèmes et réseaux basé à Lomé, Togo. Réponds UNIQUEMENT en rapport avec le profil d'Elicha. Sois précis, chaleureux et professionnel. Réponds en français sauf si la question est en anglais.
-
-PROFIL COMPLET D'ELICHA:
-- Nom complet: Yaovi Elicha AGBODOH
-- Email: elichaagbodoh@gmail.com
-- Téléphone: +228 91 908 762
-- Adresse: Rue-37-Lapampa, Lomé, Togo
-- Poste: Administrateur Systèmes et Réseaux
-
-FORMATION:
-1. Licence Administration Systèmes et Réseaux — IAI-TOGO, Lomé (nov. 2022 – déc. 2025)
-   - Gestion d'infrastructures réseaux, sécurisation, diagnostic, programmation, BDD
-2. Psychologie du Travail et des Organisations — FSHS Lomé (oct. 2023 – août 2026)
-   - SPSS, management, analyse de données humaines
-3. BAC Scientifique — Lycée d'Adidogomé 1 (2021)
-4. Montage/Installation d'Antennes Paraboliques — CEADPG (2016)
-
-EXPÉRIENCES PROFESSIONNELLES:
-1. Stagiaire Germe-tech (sept. 2025 – sept. 2026): Déploiement infrastructure réseau ZeroTrust automatisée par IaC. Stack: Ubuntu Server, Ansible, Prometheus, Grafana, Loki, AlertManager, pfSense, Windows Server, Nextcloud, Asterisk, Postfix, Dovecot.
-2. Stagiaire New Brain Factory (juin 2025 – août 2025): Mise en place environnement serveur Mail. Stack: Windows Server, Active Directory, hMailServer.
-3. Stagiaire DigIT Corporation (juil. 2024 – sept. 2024): Plateforme d'enregistrement des constantes de santé pour expos santé.
-
-PROJETS ACADÉMIQUES:
-- Infrastructure réseau virtualisée
-- Solution de conteneurisation
-- Active Directory complet avec GPO
-- Audit de sécurité (Wireshark, Nmap, Nessus)
-- Automatisation tâches d'administration système
-- Application Java de gestion des stocks
-- Site web gestion candidatures IAI-TOGO
-
-CERTIFICATIONS CISCO:
-- CCNA 1 (2023): Introduction aux réseaux
-- CCNA 2 (2024): Routage et commutation
-- CCNA 3 (2025): Réseaux d'entreprise et services sécurisés
-- Cisco Cybersécurité (2026, en cours): Principes de cybersécurité
-
-COMPÉTENCES (niveau avancé/expert):
-- Réseaux: Gestion réseaux, pfSense, Wireshark/Nmap/Nessus, VPN, ZeroTrust
-- Systèmes: Linux/Ubuntu, Windows Server, Active Directory, GPO
-- Automatisation: Ansible, IaC, scripting
-- Monitoring: Prometheus, Grafana, Loki, AlertManager
-- Services: Postfix, Dovecot, Asterisk, Nextcloud, hMailServer
-- Conteneurisation: Docker
-- BDD: SQL/MySQL (avancé), MongoDB, Neo4j (avancé)
-- Programmation: Python, Java, HTML/CSS (avancé)
-- Outils sécurité: Wireshark, Nmap, Nessus
-
-LANGUES: Français (expert), Anglais (intermédiaire)
-
-CENTRES D'INTÉRÊT: Lecture, Prédication, Jeu d'échecs, Communication, Art oratoire, Voyage
-
-RÉFÉRENCE: M. WADJA, Tel: 90 35 65 22, Chargé cellule communication et relations extérieures IAI-TOGO
-
-DISPONIBILITÉ: Ouvert à des opportunités de stage, emploi en CDI/CDD, missions freelance ou projets de collaboration dans les domaines réseaux, systèmes, cybersécurité, automatisation.
-`;
+// Profile context is handled server-side in /api/chat.js
 
 async function getAIResponse(userMessage) {
-  const response = await fetch("https://api.anthropic.com/v1/messages", {
+  const response = await fetch("/api/chat", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      model: "claude-sonnet-4-20250514",
-      max_tokens: 1000,
-      system: PROFILE_CONTEXT,
-      messages: [{ role: "user", content: userMessage }]
-    })
+    body: JSON.stringify({ message: userMessage })
   });
+  if (!response.ok) throw new Error('API error');
   const data = await response.json();
-  return data.content[0].text;
+  return data.reply;
 }
 
 async function sendMessage() {
@@ -1186,18 +1126,4 @@ async function sendMessage() {
   addMsg(text, 'user');
   aiSuggestions.style.display = 'none';
   const typing = showTyping();
-  try {
-    const reply = await getAIResponse(text);
-    typing.remove();
-    addMsg(reply, 'bot');
-  } catch(e) {
-    typing.remove();
-    addMsg("Désolé, une erreur s'est produite. Veuillez réessayer.", 'bot');
-  }
-}
-
-aiSend.addEventListener('click', sendMessage);
-aiInput.addEventListener('keypress', e => { if(e.key==='Enter') sendMessage(); });
-</script>
-</body>
-</html>
+  
