--- a/public/index.html
+++ b/public/index.html
@@ -269,7 +269,7 @@
       <div class="photo-frame">
 
         <div class="photo-slide active" id="slide-0">
-          <img src="images/photo1.jpg" alt="Elicha AGBODOH - Photo 1"
+          <img src="./images/photo1.jpeg" alt="Elicha AGBODOH - Photo 1"
               onerror="this.style.display='none';this.nextElementSibling.style.display='flex'">
           <div class="photo-placeholder" style="display:none">
             <span class="ph-icon">🧑‍💻</span>
@@ -280,25 +280,25 @@
         </div>
 
         <div class="photo-slide" id="slide-1">
-          <img src="images/photo2.jpg" alt="Elicha AGBODOH - Photo 2"
+          <img src="./images/photo2.jpeg" alt="Elicha AGBODOH - Photo 2"
               onerror="this.style.display='none';this.nextElementSibling.style.display='flex'">
           <div class="photo-placeholder" style="display:none">
             <span class="ph-icon">🖥️</span>
             <span class="ph-label">photo2.jpg</span>
             <span>Remplace par ta photo</span>
           </div>
-          <span class="photo-caption">IAI-TOGO · 2025</span>
+          <span class="photo-caption">Visite à l'ARCEP Togo</span>
         </div>
 
         <div class="photo-slide" id="slide-2">
-          <img src="images/photo3.jpg" alt="Elicha AGBODOH - Photo 3"
+          <img src="./images/photo3.jpeg" alt="Elicha AGBODOH - Photo 3"
               onerror="this.style.display='none';this.nextElementSibling.style.display='flex'">
           <div class="photo-placeholder" style="display:none">
             <span class="ph-icon">🔐</span>
             <span class="ph-label">photo3.jpg</span>
             <span>Remplace par ta photo</span>
           </div>
-          <span class="photo-caption">CCNA 3 · Certified 🏆</span>
+          <span class="photo-caption">IAI-TOGO · 2025</span>
         </div>
 
         <div class="photo-counter"><span id="slide-current">1</span> / 3</div>
